Changes - index of CategoriesController is public
