# app/Http/Controllers/AuthController.php
@@ -18,7 +18,7 @@ class AuthController extends Controller
      */
     public function __construct()
     {
-        $this->middleware('auth:api', ['except' => ['login', 'register','books/search']]);
+        $this->middleware('auth:api', ['except' => ['login', 'register', 'categories', 'books/search']]);
     }
 
     /**
